css/styles.css
body {
  margin: 0;
  padding: 0;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: antiquewhite;
}

.calculator {
  box-sizing: border-box;
  height: 600px;
  width: 400px;
  border: 1px solid black;
  border-radius: 12px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 20px;
  gap: 20px;
}

.display {
  height: 140px;
  border: 1px solid black;
  border-radius: 12px;
  padding: 16px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: center;
}

.display .operation {
  font-size: 18px;
  margin: 12px 0;
  visibility: hidden;
}

.display .result {
  font-size: 32px;
  margin: 12px 0;
}

.buttons {
  border: 1px solid black;
  border-radius: 12px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 18px;
  padding: 8px;
}

.button {
  border: 1px solid black;
  width: 70px;
  height: 60px;
  border-radius: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.button.digit.zero {
  flex: 1;
}

.button.equals {
  flex: 1;
}

.hidden {
  visibility: hidden;
}

